# oceanea

./: .gitignore  LICENSE  setup.cfg
src/oceanea/: __init__.py  data_checks.py  ndplots.py  ndspectra.py  ndvariogram.py
src/oceanea.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
