[metadata]
name = oceanea
author = William Edge
author_email = william.edge@uwa.edu.au
description = Empirical functions for the exploratory analysis of physical oceanography data.
license = BSD-3-Clause
long_description_content_type = text/markdown
url = https://github.com/williamedge/oceanea
project_urls =
    Bug Tracker = https://github.com/williamedge/oceanea/issues
    Changelog = https://github.com/williamedge/oceanea/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    xarray
    matplotlib


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    oceanea = oceanea.app:entry_point